creacion de la clase Mapa.act y configuracion de toda esta mas el agregado de esta en la clase menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Main_Activity</string>
+    <string name="title_activity_mapa_act">Map</string>
 </resources>
